testsuite/tests/properties/invalid_eq/node_cross.lkt
import common

class Example: FooNode {
    @exported fun prop(): Bool = node.parent.as[Lit] == node
}
